fix: scrollbar styling

--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,9 @@
 ::selection {
 	background-color: #a5d7d2;
 }
+
+.sidebar-navigation {
+	overflow: scroll;
+	scrollbar-color: #a5d7d2 white;
+	scrollbar-width: thin;  
+}
